tdf#146273 Do not allow non-numeric values for Navigator "Go to"

This change modifies "SwNavigationPI::EditAction" and adds a new
"connect_changed" handler "PageModifiedHdl" to the spin control
(needed to intercept text handling).  In both functions we
perform checks to ensure that only numeric values can be entered
and only values within the page range of the document.  This
now matches the behavior of the "Go to Page" feature.  To go
to the first page, just enter a character input.  To go to
the last page, just enter a value higher than the total number
of pages.

Change-Id: Ia020d72f4bed5b98b668ba95888bc4bc1d65e07d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154156
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>